<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Xue</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
<<<<<<< HEAD
=======
    <string name="menu_log">Learning Progress</string>
>>>>>>> incoming.merge.branch
    <string name="title_activity_main">Study Tool</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="ecButtonLabel">English - Chinese</string>
    <string name="ceButtonLabel">Chinese - English</string>
    <string name="exitButtonLabel">Exit</string>
    <string name="show">show</string>
    <string name="okay">okay</string>
    <string name="title_CEActivity">Chinese-English Trainer</string>
    <string name="updateAvailable">Update Available!</string>
    <string name="alert_tit">Alert!</string>
    <string name="desireUpdate">Would you like to update the card vocabulary?</string>
    <string name="quit">Confirm quit</string>
    <string name="reallyQuit">Quit and lose all progress on current deck?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="update_vocab">Update Cards</string>
    <string name="cancel_update">Cancel</string>
    <string name="no_sdcard">No SD card detected.\nPlease check your Settings.</string>
    <string name="sdcard_read_only">SD card is read-only.\nPlease check your Settings.</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="action_settings">Settings</string>
    <string name="view_eclog">English-Chinese Logs</string>
    <string name="view_celog">Chinese-English Logs</string>
    <string name="pref_ec_decksize_tit">EC Deck Size</string>
    <string name="pref_ce_decksize_tit">CE Deck Size</string>
    <string name="pref_deck_target_tit">Target Size</string>
    <string name="pref_audiofeedback_tit">Audio Feedback</string>
    <string-array name="arr_decksize">
        <item name="5">5</item>
        <item name="10">10</item>
        <item name="20">20</item>
        <item name="50">50</item>
        <item name="100">100</item>
    </string-array>
    <string-array name="arr_decksize_vals">
        <item name="5">5</item>
        <item name="10">10</item>
        <item name="20">20</item>
        <item name="50">50</item>
        <item name="100">100</item>
    </string-array>
    <string-array name="arr_targets">
        <item name="200">200</item>
        <item name="500">500</item>
        <item name="700">700</item>
    </string-array>
    <string-array name="arr_targets_vals">
        <item name="200">200</item>
        <item name="500">500</item>
        <item name="700">700</item>
    </string-array>

</resources>