<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
<<<<<<< HEAD
    android:padding="30dp" 
    android:background="@drawable/xue_bg">
=======
    android:padding="30dp" >
>>>>>>> e9e8e4bf5bdde0b6270b13181de8106e117fad0d

    <Button
        android:id="@+id/ecButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:text="@string/ecButtonLabel"
        android:textSize="40sp" 
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/ceButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="20dp"
        android:text="@string/ceButtonLabel"
        android:textSize="40sp" 
        android:textColor="#FFFFFF" />
    
    <Button
        android:id="@+id/btnGetVocab"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="UpdateVocab"
        android:text="@string/update_vocab" 
        android:textSize="30sp" 
        android:textColor="#FFFFFF" />
    
    <Button
        android:id="@+id/exitButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/exitButtonLabel"
        android:textSize="40sp" 
        android:textColor="#FFFFFF" />
        
<<<<<<< HEAD
</LinearLayout>
=======
    <Button
        android:id="@+id/btnGetVocab"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="UpdateVocab"
        android:text="@string/update_vocab" />
        android:textSize="40sp" 
        android:textColor="#FFFFFF" />
    

</LinearLayout>
    
        
>>>>>>> e9e8e4bf5bdde0b6270b13181de8106e117fad0d
