<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
<<<<<<< HEAD
    android:padding="10dp" 
    android:background="@drawable/xue_bg">
=======
    android:padding="10dp" >










>>>>>>> e9e8e4bf5bdde0b6270b13181de8106e117fad0d

    <TextView
        android:id="@+id/promptTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:gravity="bottom|center"
        android:text="@string/hello_world"
        android:textSize="40sp"
<<<<<<< HEAD
        android:textColor="#FFFFFF"
        tools:context=".MainActivity" />
=======
        tools:context=".MainActivity" />







>>>>>>> e9e8e4bf5bdde0b6270b13181de8106e117fad0d

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:ems="10"
        android:gravity="center"
<<<<<<< HEAD
        android:textColor="#FFFFFF"
        android:textSize="40sp" />
=======
        android:textSize="40sp" />






>>>>>>> e9e8e4bf5bdde0b6270b13181de8106e117fad0d

    <TextView
        android:id="@+id/otherTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:ems="3"
        android:gravity="top|center"
<<<<<<< HEAD
        android:textColor="#FFFFFF"
        android:textSize="40sp" />
=======
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/controlLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >


        <Button
            android:id="@+id/advanceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show"
            android:textSize="40sp" />

        <Button
            android:id="@+id/okayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay" 
            android:textSize="40sp" />

    </LinearLayout>



>>>>>>> e9e8e4bf5bdde0b6270b13181de8106e117fad0d


    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:gravity="center"
<<<<<<< HEAD
        android:textColor="#FFFFFF"
=======
>>>>>>> e9e8e4bf5bdde0b6270b13181de8106e117fad0d
        android:textSize="30sp" />

</LinearLayout>